--- a/HalaanTask/feature/TweetCounter/View/TweetCounterViewController.xib
+++ b/HalaanTask/feature/TweetCounter/View/TweetCounterViewController.xib
@@ -11,6 +11,9 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="TweetCounterViewController" customModule="HalaanTask" customModuleProvider="target">
             <connections>
+                <outlet property="remainingCharsCount" destination="chD-cp-Cci" id="EbH-c1-961"/>
+                <outlet property="tweetInputField" destination="yyL-l3-Vub" id="iab-hT-In6"/>
+                <outlet property="typedCharsCount" destination="vJZ-8h-WaA" id="HJG-1h-kfm"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -51,7 +54,7 @@
                                         <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="kz4-PL-1wT" userLabel="valueView">
                                             <rect key="frame" x="0.0" y="240" width="237.66666666666666" height="130"/>
                                             <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0/280" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vJZ-8h-WaA" userLabel="characterTypedTitle">
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0/280" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vJZ-8h-WaA" userLabel="characterTypedValue">
                                                     <rect key="frame" x="83.333333333333314" y="16" width="70.666666666666686" height="98"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="26"/>
                                                     <nil key="textColor"/>
@@ -161,13 +164,12 @@
                         </view>
                     </subviews>
                 </stackView>
-                <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="yyL-l3-Vub" userLabel="inputField">
+                <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="Start typing! You can enter up to 280 characters" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="yyL-l3-Vub" userLabel="inputField">
                     <rect key="frame" x="16" y="526" width="495" height="240"/>
                     <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="240" id="970-ZH-Uek"/>
                     </constraints>
-                    <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
                     <color key="textColor" systemColor="labelColor"/>
                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                     <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
@@ -204,6 +206,9 @@
                                             <real key="value" value="12"/>
                                         </userDefinedRuntimeAttribute>
                                     </userDefinedRuntimeAttributes>
+                                    <connections>
+                                        <action selector="onCopyTextTapped:" destination="-1" eventType="touchUpInside" id="cfS-Zj-k3p"/>
+                                    </connections>
                                 </button>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zpr-RN-mTr" userLabel="emptyView">
                                     <rect key="frame" x="99" y="0.0" width="297" height="128"/>
@@ -221,6 +226,9 @@
                                             <real key="value" value="12"/>
                                         </userDefinedRuntimeAttribute>
                                     </userDefinedRuntimeAttributes>
+                                    <connections>
+                                        <action selector="onClearTextTapped:" destination="-1" eventType="touchUpInside" id="jSm-JG-oxF"/>
+                                    </connections>
                                 </button>
                             </subviews>
                         </stackView>
@@ -236,6 +244,9 @@
                                     <real key="value" value="16"/>
                                 </userDefinedRuntimeAttribute>
                             </userDefinedRuntimeAttributes>
+                            <connections>
+                                <action selector="onPostTweetTapped:" destination="-1" eventType="touchUpInside" id="IkZ-Ct-kMB"/>
+                            </connections>
                         </button>
                     </subviews>
                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
